--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #intro{
     padding: 25px;
     width: auto;
-    background: cadetblue;
+    background: #4aaaa5;
     color: white;
     font-size: 28px;
     position: relative;
@@ -12,23 +12,28 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
     line-height: 150%;
-    color: #333;
-    background: #efeee7;
+    color: #777777;
+    background: #ffffff;
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/spiration-dark.png");
 }
 
 #topBar{
-    display: inline;
-    position: absolute;
+    overflow: hidden;
+    background:#ffffff;
+    font-family: Georgia, "Times New Roman", Times, serif;
+
 }
 
 nav{
     float: right;
     margin-top: 25px;
     position: relative;
+    margin-right: 30px;
 }
+
 li{
     display: inline;
     text-align: center;
@@ -45,6 +50,6 @@ li:last-child{
 
 #main{
     background: white;
-    height: 50px;
+    height: auto;
     width: 960px; 
 }
