--- a/style.css
+++ b/style.css
@@ -20,10 +20,14 @@ body{
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/spiration-dark.png");
 }
 
+h1{
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
 #topBar{
     overflow: hidden;
     background:#ffffff;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    
 
 }
 
@@ -65,6 +69,37 @@ li:last-child{
 
 #main{
     background: white;
-    height: auto;
-    width: 960px; 
+    width: 960px;
+    padding: 20px;
+    margin: 60px auto;
+    clear: both;
+    overflow: hidden;
+}
+
+#bioHead{
+    color: #4aaaa5;
+    font-size: 28px;
+    padding: 30px;
+    text-align: left;
+    border-bottom: 2px solid #4aaaa5;
+}
+
+#portrait{
+    float: left;
+}
+
+#portrait{
+    margin-right: 10px;
+}
+
+#bio{
+    margin-right: 10px;
+    line-height: 2;
+}
+
+.rest{
+    float: left;
+    line-height: 2;
+    text-indent: 50px;
+    margin-top: 40px 
 }
