--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 150%;
     color: #777777;
@@ -81,7 +81,7 @@ li:last-child{
     font-size: 28px;
     padding: 30px;
     text-align: left;
-    border-bottom: 2px solid #4aaaa5;
+    border-bottom: 2px solid #777777;
 }
 
 #portrait{
@@ -90,6 +90,10 @@ li:last-child{
 
 #portrait{
     margin-right: 10px;
+}
+
+#container{
+    margin-top: 10px; 
 }
 
 #bio{
@@ -103,3 +107,41 @@ li:last-child{
     text-indent: 50px;
     margin-top: 40px 
 }
+
+#copyright{
+    text-align: center;
+    overflow: hidden;
+    background:#666666;
+    padding: 15px;
+    color: grey;
+    border-top: 5px solid #4aaaa5;
+}
+
+#inputs{
+    letter-spacing: 1x;
+    margin: 10px;
+}
+
+#name{
+    width: 100%;
+    padding: 7px;
+}
+
+#message{
+    width: 100%;
+    padding: 7px;
+    resize: vertical;
+    font-size: 16px;
+    height: 150px;
+}
+
+#email{
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    padding: 10px;
+    background: #4aaaa5;
+    margin-left: 10px;
+    color: white;
+    font-size: 1.1em;
+    border: none;
+}
+
