--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ li:last-child{
     text-align: center;
     overflow: hidden;
     background:#666666;
-    padding: 15px;
+    padding: 5px;
     color: grey;
     border-top: 5px solid #4aaaa5;
     
@@ -145,31 +145,54 @@ li:last-child{
 }
 
 
-.bodyContainer img:first-child{
-    
-    margin-left: auto;
-    margin-right: 30px;
-    display: inline-block;
-    
-}
-
-.bodyContainer img:last-child{
-    
-    margin-left: 30px;
-    margin-right: auto;
-    display: inline-block;
-    
-}
-
-
 .bodyContainer{
     width: 960px;
     text-align:center;
     margin-top: 20px;
+}
 
+.overtext{
+    position: absolute;
+    background:  #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 300px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 250%);
 
 }
 
+.bottomContainer{
+    width: 960px;
+    text-align:center;
+    margin-top: 20px;
+    display: inline-block;
+}
 
+.imgBox{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+}
 
+.imgBox:first-child{
+    margin-right: 30px;
+  
+}
+
+.imgBox:last-child{
+    margin-left: 30px;
+}
+
+.wrapper {
+    min-height: 100%;
+  
+    margin-bottom: -50px;
+  }
+  .footer,
+  .push {
+    height: 50px;
+  }
 
