--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     float: left;
 }
 body{
+    height: 100%;
     padding: 0;
     margin: 0;
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
@@ -19,6 +20,11 @@ body{
     background: #ffffff;
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/spiration-dark.png");
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+  }
 
 h1{
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -188,9 +194,9 @@ li:last-child{
 
 .wrapper {
     min-height: 100%;
-  
     margin-bottom: -50px;
   }
+
   .footer,
   .push {
     height: 50px;
